--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         Hello, world!
         Here is a new feature! :)
+        Here is another sick new feature!!
     </body>
 </html>
