--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <body>
         Hello, world!
         Here is a new feature! :)
+
+        <a href="links.html">Click Here!</a>
     </body>
 </html>
